[package]
name = "kropp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
imageproc = "0.27.0"
ort = { version = "=2.0.0-rc.10", features = ["fetch-models", "cuda", "directml"] }
tiff = "0.11.3"
usls = { version = "0.1.11", features = ["rmbg", "cuda", "directml"] }
