[package]
name = "kropp"
version = "0.1.0"
edition = "2024"
description = "Crop and deskew objects from flatbed scans"
license = "MIT"
readme = "README.md"

[features]
default = ["sam3"]
# SAM3 text-prompted segmentation as an alternative to RMBG. Pulls in usls's
# tokenizer stack and downloads the SAM3 ONNX models on first use; disable with
# --no-default-features to build an RMBG-only binary.
sam3 = ["usls/sam3"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
imageproc = "0.27.0"
tiff = "0.11.3"
ort = { version = "=2.0.0-rc.10", features = ["fetch-models"] }
usls = { version = "0.1.11", features = ["rmbg"] }

# The CUDA and DirectML execution providers are Windows-specific here: DirectML
# only ships Windows binaries, and these GPU features are gated to Windows so
# Linux and macOS build CPU-only. Every `Device` variant exists regardless of
# features, so `build_rmbg`'s CUDA -> DirectML -> CPU fallback just lands on CPU
# where a provider isn't compiled in.
[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "directml"] }
usls = { version = "0.1.11", features = ["cuda", "directml"] }
